<resources>
    <string name="app_name">My Application1</string>
    <string name="next_page">Next Page</string>
    <string name="second_activity">Second Activity</string>
    <string name="new_page">new page</string>
    <string name="page3">page3</string>
    <string name="relative_layout">Relative layout</string>
    <string name="sign_in">Sign In</string>
    <string name="staff">Staff</string>
    <string name="staff_id">Staff Id</string>
    <string name="password">Password</string>
    <string name="staff_id1">Staff Id :</string>
    <string name="password1">Password     :</string>
    <string name="login">Login</string>
    <string name="enter_your_password">enter your password</string>
    <string name="enter_your_id">enter your id</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="_1st_image_button">1st image button</string>
    <string name="_2nd_image_button">2nd image button</string>
    <string name="text1" />
    <string name="text2" />
    <string name="text3" />
    <string name="text4" />
    <string name="hello_world">Hello world</string>
</resources>