<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_alignParentTop="true"

        android:layout_centerHorizontal="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/staff_id1"

    android:layout_marginTop="200dp"
    android:id="@+id/staff_id1"

    android:layout_below="@+id/relativeLayout"
     />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password1"
        android:layout_below="@+id/relativeLayout"
        android:id="@+id/password1"
        android:layout_marginTop="250dp"

         />
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="300dp"
        android:text="@string/login"
        />
<EditText
    android:layout_toEndOf="@+id/password1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@+id/password1"
    android:layout_marginTop="255dp"
    android:hint="@string/enter_your_password"
    android:autofillHints="@string/password"
    android:inputType="text" />
    <EditText
        android:layout_toEndOf="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/staff_id1"
        android:layout_marginTop="205dp"
        android:hint="@string/enter_your_id"
        android:autofillHints="@string/password"
        android:inputType="text" />



</RelativeLayout>