<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="323dp">

        <TextView
            android:id="@+id/newtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <TextView
            android:id="@+id/text2"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="left|top"
            android:text="@string/text2"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="left|top"
            android:text="@string/text3"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="left|top"
            android:text="@string/text4"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="left|top"
            android:text="@string/text4"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="left|top"
            android:text="@string/text4"
            tools:ignore="RtlHardcoded" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>